more page now has the navbar and the basic 4 links working

--- a/frontend/css/components/more.css
+++ b/frontend/css/components/more.css
@@ -1,7 +1,4 @@
-@import url(./components/navbar.css);
-@import url(./components/animationHomePage.css);
-@import url(./components/backgroundAnimation.css);
-@import url(./components/more.css);
+@import url(../components/navbar.css);
 
 .links-container {
   position: absolute;
