--- a/frontend/css/profile.css
+++ b/frontend/css/profile.css
@@ -7,8 +7,8 @@
   display: flex;
   align-items: flex-start;
   justify-content: space-around;
-  gap: 40px;
-  padding: 40px 20px 0 80px;
+  gap: 20px;
+  padding: 40px 20px 0 100px;
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -36,12 +36,12 @@
    User Card (Left Column)
    ======================= */
 .user-card {
-  flex: 0 0 350px;
+  flex: 0 0 300px;
   display: flex;
   flex-direction: column;
   align-items: center;
   background: rgba(255, 255, 255, 0.95);
-  padding: 20px;
+  padding: 10px;
   border-radius: 10px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
   gap: 15px;
@@ -233,16 +233,27 @@
 .posts-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 15px;
+  gap: 13.33px;
 }
 
 .post-card {
-  flex: 0 0 calc(33.333% - 10px);
+  flex: 0 0 calc(25% - 10px);
   display: flex;
   flex-direction: column;
   background: #f9f9f9;
   border-radius: 6px;
   overflow: hidden;
+}
+
+@media (max-width: 1000px) {
+  .posts-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+  }
+  .post-card {
+    flex: 0 0 calc(33.333% - 10px);
+  }
 }
 
 .post-card img {
